# multilingual-sentiment-classifier

./: LICENSE  MANIFEST.in  README.md  setup.cfg
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
multilingual_sentiment_classifier.egg-info/: PKG-INFO  SOURCES.txt
multilingual_sentiment_classifier_saman_azhar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
multilingualsentimentclassifier/: methods.py
