[metadata]
name = multilingual-sentiment-classifier
version = 1.6
author = saman azhar, areesha ramzan, hamnna ayemen
author_email = saman.azhar36@gmail.com, areesharamzan02@gmail.com, hamnna035@gmail.com
description = A Python library to predict sentiments of textual data in English, Urdu or Roman Urdu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saman-azhar/multilingual-sentiment-classifier
project_urls =
    Bug Tracker = https://github.com/saman-azhar/multilingual-sentiment-classifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True